// Since: cosmos-sdk 0.43
syntax = "proto3";
package osmosis.osmolbp.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/osmosis-labs/osmosis/x/osmolbp/proto";
option (gogoproto.goproto_getters_all) = false;

message EventCreateLBP {
  uint64 id = 1;
  string creator = 2;
  string token_in = 3;
  string token_out = 4;
}

message EventDeposit {
  string sender = 1;
  uint64 pool_id = 2;
  string amount = 3;
}

message EventWithdraw {
  string sender = 1;
  uint64 pool_id = 2;
  // amount of purchased tokens
  string purchased = 3;
}
